syntax = "proto3";

option csharp_namespace = "AzureConnectedServices.Services.Proto";

package azureconnectedservices.protobuf;

import public "Protos/greet.proto";
import public "Protos/noaa.proto";

service ProtoFirstGreeter {
  rpc UnaryOperation (SampleProtoFirstRequest) returns (SampleProtoFirstReply);
  rpc ServerStreamingOperation (SampleProtoFirstRequest) returns (stream SampleProtoFirstReply);
  rpc ClientStreamingOperation (stream SampleProtoFirstRequest) returns (SampleProtoFirstReply);
  rpc DuplexStreamingOperation (stream SampleProtoFirstRequest) returns (stream SampleProtoFirstReply);
}

service NoaaWeather {
  rpc NoaaWeatherOperation (NoaaWeatherRequest) returns (SampleProtoFirstReply);
}
